# billing

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
billing/: settings.py  urls.py
billing/billing/: asgi.py  settings.py  urls.py  wsgi.py
billing/billing/migrations/: 0001_initial.py  0002_transaction_amount_alter_balance_amount_and_more.py
billing/billing/models/: __init__.py  customer.py  products.py  transaction.py
billing/billing/serializers/: customer_serializer.py  payment_serializer.py  product_serializer.py  transaction_serializer.py  withdrawal_serializer.py
billing/billing/views/: __init__.py  customer_view.py  payment_view.py  response_view.py  transaction_view.py
billing/migrations/: 0001_initial.py
billing/models/: products.py  transaction.py
billing/serializers/: balance_serializer.py  product_serializer.py
billing/views/: __init__.py  product_view.py
testsuite/: BaseAssertions.py  __init__.py  conftest.py  generator.py  test_1.py
